--- a/infernace-api/package.json
+++ b/infernace-api/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "validator": "^13.15.0"
   }
 }
