--- a/infernace-api/package.json
+++ b/infernace-api/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.15.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.3",
     "validator": "^13.15.0"
   }
 }
